# iPocasie

./: Cargo.toml
src/: TODO.md  forecast.rs  main.rs  one_call_api.rs  openweather_geo.rs.old
src/examples/: current_weather.json  forecast.json
